syntax = "proto3";

package pb;

service User {
    rpc Login(LoginRequest) returns (LoginReply) {}
    rpc GetPermissions(GetPermissionsRequest) returns (GetPermissionsReply) {}
    rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionReply) {}
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginReply {
    int64 id = 1;
    string username =2;
    string userType = 3;
    string token = 4;
}

message GetPermissionsRequest {}

message GetPermissionsReply {
    repeated Menu menus = 2;
}

message Menu {
    string menu = 1;
    string route = 2;
    string data = 3;
    repeated Menu children = 4;
}

message CheckPermissionRequest {
    string route = 1;
}

message CheckPermissionReply {
    bool result = 1;
}